inc/acf/blocks/events/events.module.scss
@use "../../../../src/styles/variables.scss";

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 40px;
}

@media screen and (max-width: calc(variables.$tablet - 0.1px)) {
    .section {
        padding-top: 24px;
        padding-bottom: 64px;
    }
}

@media screen and (min-width: variables.$tablet) {
    .section {
        padding-top: 0px;
        padding-bottom: 64px;
    }
}

@media screen and (min-width: variables.$desktop) {
    .section {
        padding-bottom: 80px;
    }
}

@media screen and (min-width: variables.$full) {
    .container {
        gap: 160px;
    }
}

/* Title styles */

.title-d-wrapper {
    display: none;
    justify-content: center;
}

.title-mtf,
.title-d {
    display: flex;
    flex-direction: column;
    gap: 12px;
    align-items: center;
}

.title-d {
    gap: 24px;
    align-items: flex-end;
}

.title-mtf-header,
.title-d-header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 12px;
}

.title-d-header {
    gap: 24px;
}

.title-mtf-header h1,
.title-d-header h1 {
    text-align: center;
    font-family: variables.$primary-font;
    font-size: 24px;
    color: variables.$dark-red;
}

.title-d-header h1 {
    font-size: 38px;
}

.title-mtf-header img {
    width: 36px;
    height: 36px;
}

.title-mtf-header img:nth-of-type(2),
.title-d-header img:nth-of-type(2) {
    rotate: -180deg;
}

.title-mtf-decoration-image-tablet,
.title-mtf-decoration-image-full {
    display: none;
}

@media screen and (max-width: calc(variables.$tablet - 0.1px)) {
    .title-mtf-header h1 {
        min-width: 204px;
    }
}

@media screen and (min-width: variables.$tablet) {
    .title-mtf {
        gap: 40px;
    }

    .title-mtf-header {
        gap: 24px;
        align-self: flex-end;
    }

    .title-mtf-header h1 {
        font-size: 32px;
    }

    .title-mtf-decoration-image-mobile {
        display: none;
    }

    .title-mtf-decoration-image-tablet {
        display: block;
    }
}

@media screen and (min-width: variables.$desktop) {
    .title-mtf {
        display: none;
    }

    .title-d-wrapper {
        display: flex;
    }
}

@media screen and (min-width: variables.$full) {
    .title-mtf {
        display: flex;
        align-items: flex-end;
    }

    .title-d-wrapper {
        display: none;
    }

    .title-mtf-header {
        gap: 32px;
    }

    .title-mtf-header h1 {
        font-size: 44px;
    }

    .title-mtf-decoration-image-tablet {
        display: none;
    }

    .title-mtf-decoration-image-full {
        display: flex;
    }
}

/* Items styles */

.events {
    display: flex;
    flex-direction: column;
    gap: 40px;
}

@media screen and (min-width: variables.$full) {
    .events {
        gap: 160px;
    }
}

/* Item styles */

.item {
    padding: 64px 0px;
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.item-upper-part {
    display: flex;
    justify-content: center;
    height: 83.33vw;
}

.item-upper-part-wrapper {
    position: relative;
    display: flex;
    justify-content: center;
    width: 73.17%;
}

.item-upper-part-link {
    position: absolute;
    width: 89.16%;
    height: 91%;
    border-radius: 4px;
    border: 1px solid #4E4A4A;
    transform: translateX(-5px) translateY(-5px) rotate(4deg);
    transition: all variables.$animations;
}

.item-upper-part-link:hover {
    transform: translateX(-5px) translateY(-5px) rotate(3deg);
}

.item-upper-part-image {
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.item-upper-part-blue {
    position: absolute;
    width: 89.16%;
    height: 91%;
    border-radius: 4px;
    border: 2px solid variables.$blue;
}

.item-upper-part-yellow {
    position: absolute;
    width: 89.16%;
    height: 91%;
    border-radius: 4px;
    border: 2px solid variables.$yellow;
    transform: translateX(3px) translateY(6px) rotate(4deg);
}

.item-text-part {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.item-text-part-title {
    font-family: variables.$primary-font;
    font-size: 14px;
}

.item-text-part-card {
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.item-text-part-card-info {
    display: flex;
    flex-direction: column;
    gap: 40px;
    padding: 0px 12px;
    border-left: 2px solid variables.$red;
}

.item-text-part-card-info-datetime {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.item-text-part-card-info-date {
    font-family: variables.$primary-font;
    font-size: 14px;
    color: variables.$dark-red;
}

.item-text-part-card-info-time {
    font-family: variables.$secondary-font;
    font-size: 14px;
    color: variables.$red;
}

.item-text-part-card-info-address-and-location {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.item-text-part-card-info-address {
    font-family: variables.$primary-font;
    font-size: 14px;
    color: variables.$dark-red;
    text-transform: uppercase;
}

.item-text-part-card-info-location {
    font-family: variables.$secondary-font;
    font-size: 14px;
    color: variables.$red;
}

.item-text-part-card-info-price-and-duration {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.item-text-part-card-info-price,
.item-text-part-card-info-duration {
    display: flex;
    flex-direction: row;
    gap: 8px;
}

.item-text-part-card-info-price-label,
.item-text-part-card-info-duration-label {
    font-family: variables.$secondary-font;
    font-size: 14px;
    color: variables.$dark-red;
}

.item-text-part-card-info-price-value,
.item-text-part-card-info-duration-value {
    font-family: variables.$secondary-font;
    font-size: 14px;
    color: variables.$red;
}

.item-text-part-card-texts {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.item-text-part-mt-register-block {
    display: flex;
}
/* ... */

